# carapace

./: .gitignore  ARCHITECTURAL_ISSUE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEBUGGING.md  DEBUG_TOOLS_READY.md  DEPLOYMENT.md  README.md  SSE_STREAMING_FIX_SUMMARY.md  deploy.sh
.github/workflows/: build.yml  test.yml
crates/carapace-agent/: Cargo.toml
crates/carapace-agent/src/: cli_handler.rs  config.rs  connection.rs  error.rs  http_proxy.rs  lib.rs  main.rs  multiplexer.rs
crates/carapace-agent/tests/: connection_failure_recovery_test.rs  connection_test.rs  e2e_signal_cli_test.rs  full_integration_test.rs  http_proxy_test.rs  multiplexer_test.rs  openclaw_integration_test.rs  sse_streaming_test.rs  tcp_message_framing_test.rs
crates/carapace-debug/: Cargo.toml
crates/carapace-debug/src/: audit.rs  connections.rs  health.rs  main.rs  policy.rs  sniff.rs  sse_test.rs
crates/carapace-policy/: Cargo.toml
crates/carapace-policy/src/: config.rs  error.rs  lib.rs  matcher.rs  validator.rs
crates/carapace-policy/tests/: param_filter_test.rs
crates/carapace-protocol/: Cargo.toml
crates/carapace-protocol/src/: error.rs  framing.rs  lib.rs  messages.rs
crates/carapace-protocol/tests/: error_handling_test.rs
crates/carapace-server/: Cargo.toml
crates/carapace-server/src/: audit.rs  cli_dispatch.rs  config.rs  connection_tracker.rs  debug_server.rs  error.rs  http_dispatch.rs  lib.rs  listener.rs  main.rs  rate_limiter.rs
crates/carapace-server/tests/: audit_test.rs  cli_injection_test.rs  debug_endpoints_test.rs  entry_point_test.rs  http_dispatch_integration_test.rs  http_dispatch_test.rs  openclaw_sse_streaming_test.rs  policy_enforcement_test.rs  sse_streaming_e2e_test.rs  sse_streaming_real_time_test.rs
crates/carapace-shim/: Cargo.toml
crates/carapace-shim/src/: main.rs
crates/carapace-shim/tests/: shim_test.rs
docs/: plan-gogcli-gmail-integration.md
examples/policies/: 1password.yaml  gogcli.yaml  signal-cli.yaml
tests/: integration_test.rs  security_test.rs
