[package]
name = "carapace-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
carapace-protocol = { path = "../carapace-protocol" }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
carapace-protocol = { path = "../carapace-protocol" }
